# Alpha-Signal

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alphasignal.db  app.py  coin_manager_app.py  convert_key.py  docker-compose.yml  pyproject.toml  send_sol_home.py  setup.sh  start.sh  start_backend.sh  stop.sh  wallet_keypair.json
alphasignal/: app.py  main.py  ngrok.py  ngrok_run.py  processor.py
alphasignal/ai/chains/: twitter_chains.py
alphasignal/ai/models/: sentiment_response.py
alphasignal/ai/prompts/: twitter_prompts.py
alphasignal/apis/dexscreener/: Untitled-json.json  dexscreener_client.py
alphasignal/apis/jupiter/: jupiter_client.py
alphasignal/apis/solana/: solana_client.py
alphasignal/commands/: account.py  coin_manager.py  twitter.py  wallet.py
alphasignal/config/: auto_buy_config.json  auto_sell_config.json  sell_config.json
alphasignal/database/: db.py
alphasignal/llm/: llm.py
alphasignal/models/: coin.py  configs.py  constants.py  dexscreener_token.py  enums.py  event.py  mint_token.py  order.py  profile.py  quote_output.py  swap_confirmation.py  token_info.py  token_value.py  tweet.py  tweet_catcher_payload.py  tweet_data_extraction.py  tweet_webhook.py  wallet.py  wallet_token.py  wallet_value.py
alphasignal/modles/: coin.py  constants.py  wallet_token.py
alphasignal/routers/: coin_router.py  config_router.py  order_router.py  orders_router.py  profile_router.py  test_router.py  wallet_router.py  webhook_router.py
alphasignal/schemas/: coins_response.py  fund_payload.py  payload_wallet.py  payquote_request.py  swap_confirmation.py
alphasignal/schemas/requests/: add_coin_request.py  (+9 more)
alphasignal/services/: auto_manager.py  coin_manager.py  order_manager.py  profile_manager.py  service.py  token_manager.py  twitter_monitor.py  wallet_manager.py
alphasignal/tests/: test_twitter_manager.py  test_wallet_router.py
alphasignal/utils/: utils.py
alphasignal/wallet/: solana_wallet.py  test.json  transfer_solana.py
sample_hooks/: reply_webhook.json  retweet_webhook.json  tweet_webhook.json
ui/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.app.json
ui/src/: App.tsx  index.css
(+25 files in other folders)
