[project]
name = "alphasignal"
version = "0.1.0"
description = "One stop shop for the Alpha Singal."
authors = []
license = "MIT"
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
    "solana (==0.36.2)",
    "solders (==0.23.0)",
    "base58 (==2.1.1)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "ngrok (>=1.4.0,<2.0.0)",
    "tenacity (>=9.0.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
