[project]
name = "alphasignal"
version = "0.1.0"
description = "One stop shop for the Alpha Signal."
authors = []
license = "MIT"
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
    "solana (==0.36.2)",
    "solders (==0.23.0)",
    "base58 (==2.1.1)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "ngrok (>=1.4.0,<2.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "langchain-openai (>=0.3.5,<0.4.0)",
    "langchain-anthropic (>=0.3.7,<0.4.0)",
    "langchain-google (>=0.1.1,<0.2.0)",
    "langchain-mistralai (>=0.2.6,<0.3.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)",
    "langchain-google-genai (>=2.0.9,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["alphasignal/tests"]

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.4,<9.0.0)",
]